--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
@@ -13,6 +13,7 @@
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
+  <!--Two options: create a new plan, or choose from marketplace-->
   <ion-grid class="full-height" *ngIf="planPage === 'createOrChoose'">
     <ion-row class="full-height grid-row ion-align-items-center">
       <ion-col size-xs="12" size-sm="6">
@@ -21,7 +22,7 @@
             <ion-card-title>Create a New Plan</ion-card-title>
           </ion-card-header>
           <!--<ion-card-content>
-            <li>Embark on a Journey of Growth</li>
+            Image goes here
           </ion-card-content>-->
         </ion-card>
       </ion-col>
@@ -31,12 +32,13 @@
             <ion-card-title>Choose from Available Template</ion-card-title>
           </ion-card-header>
           <!--<ion-card-content>
-            <li>Grow with the Guidance from a Mentor</li>
+            Image goes here
           </ion-card-content>-->
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
+  <!--In the create step, show a form to collect basic info about a new Plan-->
   <ion-grid class="full-height" *ngIf="planPage === 'create'">
     <ion-row class="ion-justify-content-center ion-align-items-center full-height">
       <ion-col>
@@ -47,10 +49,6 @@
           <ion-label position="stacked">Name your plan</ion-label>
           <ion-input class="ion-text-start" type="text" [(ngModel)]="planName" placeholder="Plan Name"></ion-input>
         </ion-item>
-        <!--<ion-item lines="none"> &lt;!&ndash;Description&ndash;&gt;
-          <ion-label class="summary-label">Description:</ion-label>
-          <ion-textarea rows="1" [minRows]="1" [maxRows]="5" autosize class="ion-text-start ion-text-wrap" [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10010)][0]"></ion-textarea>
-        </ion-item>-->
         <ion-item lines="none" class="ion-margin-vertical">
           <ion-label position="stacked">Select the type of plan</ion-label>
           <ion-select (ionChange)="loadSample($event)" placeholder="Plan Type">
