calvin-content-creator (#105)
* add Alvin's content creation concept

1.8.14 (2)

* add Alvin's content creation concept

1.8.14 (2)

* expand pickfeature-popover to allow multi-type display

1.8.14 (2)

* limit loadSample API, all categories, to load only sample programs, journeys, groups, mentoring, relationships

1.8.14 (2)

* clean up unused backend code and route handlers

1.8.14 (2)

* added subpanel support for create Activity and pickfeature-popover

1.8.14 (2)

* added subpanel support for pickfeature-popover - pick onboarding flow

1.8.14 (2)

* improve program-card formatting by using width=133px and size=auto in ion-col

1.8.14 (2)

* allow pickfeature to clone 'Recent' activities in subpanel view (manage mode)

1.8.14 (2)

* allow pickfeature to clone 'Recent' activities in subpanel view (manage mode)

1.8.14 (2)

* improve pickfeature, feature-schedule

1.8.14 (2)

* improve pickfeature, feature-schedule

1.8.14 (2)

* add empty state in subpanel groupchat

1.8.14 (2)

* added admin creator, bug fix

1.8.14 (2)

* improve secondary menu logic

1.8.14 (2)

* add feature-creator and feature-curriculum, improve pickfeature

1.8.14 (2)

* improve manage-feature modalCtrl logic

1.8.14 (2)

* improve css

1.8.14 (2)

* improve editfeature modalCtrl entry logic

1.8.14 (2)

* add Alvin's content creation concept

1.8.14 (2)

* add Alvin's content creation concept

1.8.14 (2)

* expand pickfeature-popover to allow multi-type display

1.8.14 (2)

* limit loadSample API, all categories, to load only sample programs, journeys, groups, mentoring, relationships

1.8.14 (2)

* clean up unused backend code and route handlers

1.8.14 (2)

* added subpanel support for create Activity and pickfeature-popover

1.8.14 (2)

* added subpanel support for pickfeature-popover - pick onboarding flow

1.8.14 (2)

* improve program-card formatting by using width=133px and size

--- a/src/app/pages/feature/manage/feature-creator/feature-creator.page.scss
+++ b/src/app/pages/feature/manage/feature-creator/feature-creator.page.scss
@@ -1,20 +1,13 @@
-app-programs {
-
-  .program-row {
-    height: 100px;
-  }
-
+app-feature-creator {
   .program-card {
-    width: 133px;
+    //width: 100%;
     object-fit: contain;
     margin: 0 3%;
   }
 
   .program-photo-container {
-    height: 80px;
+    height: 150px;
     overflow: hidden;
-    //border-radius: 50%;
-    //margin: 5% auto;
   }
 
   .program-photo {
@@ -28,16 +21,6 @@ app-programs {
     //max-height: 200px;
   }
 
-  .program-name {
-    position: absolute;
-    bottom: 2%;
-    left: 2%;
-    color: white;
-    font-size: 12px;
-    cursor: pointer;
-    z-index: 15;
-  }
-
   .program-type {
     position: absolute;
     top: 2%;
@@ -46,13 +29,22 @@ app-programs {
     cursor: pointer;
   }
 
+  .program-name {
+    position: absolute;
+    bottom: 2%;
+    left: 2%;
+    font-size: 12px;
+    cursor: pointer;
+    z-index: 15;
+  }
+
   .info-moment {
     position: absolute;
     top: 0;
     right: 2px;
   }
 
-  .opacity {
-    opacity: 0.4;
+  .light {
+    color: white;
   }
 }
