--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -154,8 +154,8 @@
       </ion-item-group>
     </div>
   </ion-toolbar>
-  <ion-grid style="height: 100%" *ngIf="loadStatus !== 'completed'">
-    <ion-row class="ion-justify-content-start ion-align-items-center" style="height: 100%">
+  <ion-grid style="height: 105%" *ngIf="loadStatus !== 'completed'">
+    <ion-row class="ion-justify-content-start ion-align-items-center" style="height: 95%">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
@@ -546,7 +546,7 @@
         </div>
       </div>
       <div class="component" *ngIf="item === 10370"> <!--Plan-->
-        <ion-slides class="program-slides" #plansSlides [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
+        <ion-slides class="program-slides" #plansSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
           <ion-slide class="program-slide" *ngFor="let program of planModules; trackBy: customTrackBy">
             <ion-card class="program-card" (click)="openProgram($event, program)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
               <ion-card-content class="ion-no-padding">
@@ -742,76 +742,64 @@
           <ion-row *ngIf="!matchedPeople.length && !loadAPIBusy && loadStatus === 'completed'" class="ion-justify-content-center">
             <p>The Directory is Empty.</p>
           </ion-row>
-          <ion-row>
-            <ion-col size-lg="0.5" size-md="1" size-sm="1.5" size-xs="1.5">
-             <button (click)="swipePrevious()" [disabled]="disablePrevBtn" class="slideButton"> 
-               <ion-icon class="arrowButton" name="chevron-back-outline"></ion-icon>
-             </button> 
-            </ion-col>
-            <ion-col size-lg="11" size-md="10" size-sm="9" size-xs="9">
-              <ion-slides class="person-slides" #peopleSlides (ionSlideWillChange)="doCheck()"  (ionSlideDidChange)="swipePeopleSlide()" [options]="{slidesPerView: 1.1, grabCursor: true, updateOnWindowResize: true}">
-                <ion-slide class="person-slide" *ngFor="let leader of moment.user_list_3" [hidden]="matchedPeople.length || !loadAPIBusy">
-                  <ion-card class="person-card">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
-                    <ion-card-header>
-                      <div class="person-photo-container">
-                        <ion-img class="person-photo" src="assets/img/avatar-default.jpg"></ion-img>
+          <div class="swiper-button-prev swiper-button-white" (click)="slides.slidePrev()" [hidden]="disablePrevBtn || this.platform.is('cordova') || this.platform.is('mobileweb')"></div>
+          <ion-slides class="person-slides" #peopleSlides (ionSlideDidChange)="swipePeopleSlide()" [options]="peopleSlidesOptions">
+            <ion-slide class="person-slide" *ngFor="let leader of moment.user_list_3" [hidden]="matchedPeople.length || !loadAPIBusy">
+              <ion-card class="person-card">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
+                <ion-card-header>
+                  <div class="person-photo-container">
+                    <ion-img class="person-photo" src="assets/img/avatar-default.jpg"></ion-img>
+                  </div>
+                </ion-card-header>
+                <div class="top-pattern"></div>
+                <div class="middle-pattern"></div>
+                <div class="bottom-pattern"></div>
+                <ion-card-content class="person-content ion-no-padding">
+                  <ion-item lines="none" class="person-content-item ion-no-margin">
+                    <div class="person-content-left" style="margin-top: 10px">
+                      <div class="person-name ion-text-md-uppercase" style="height: 18px">
+                        <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text>
                       </div>
-                    </ion-card-header>
-                    <div class="top-pattern"></div>
-                    <div class="middle-pattern"></div>
-                    <div class="bottom-pattern"></div>
-                    <ion-card-content class="person-content ion-no-padding">
-                      <ion-item lines="none" class="person-content-item ion-no-margin">
-                        <div class="person-content-left" style="margin-top: 10px">
-                          <div class="person-name ion-text-md-uppercase" style="height: 18px">
-                            <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text>
-                          </div>
-                          <div class="person-title">
-                            <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
-                          </div>
-                        </div>
-                        <div class="person-content-right" [ngClass]="{'content-border': true }">
-                          <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
-                          <div><ion-skeleton-text animated style="width: 100%"></ion-skeleton-text></div>
-                          <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
-                          <div><ion-skeleton-text animated style="width: 80%"></ion-skeleton-text></div>
-                        </div> <!--Short Biography-->
-                      </ion-item>
-                    </ion-card-content>
-                  </ion-card>
-                </ion-slide>
-                <ion-slide class="person-slide" *ngFor="let person of matchedPeople; trackBy: customTrackBy">
-                  <ion-card class="person-card" (click)="seeUserInfo($event, person)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
-                    <ion-card-header>
-                      <div class="person-photo-container">
-                        <ion-img class="person-photo" *ngIf="person.avatar" [src]="person.avatar"></ion-img>
-                        <ion-img class="person-photo" *ngIf="!person.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+                      <div class="person-title">
+                        <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
                       </div>
-                    </ion-card-header>
-                    <div class="top-pattern"></div>
-                    <div class="middle-pattern"></div>
-                    <div class="bottom-pattern"></div>
-                    <ion-card-content class="person-content ion-no-padding">
-                      <ion-item lines="none" class="person-content-item ion-no-margin">
-                        <div class="person-content-left">
-                          <div class="person-name ion-text-md-uppercase">
-                            {{person.first_name}} {{person.last_name}}
-                          </div>
-                          <div class="person-title" [innerHTML]="person.title"></div>
-                        </div>
-                        <div class="person-content-right" [ngClass]="{'content-border': person.bio }" [innerHTML]="person.bio"></div> <!--Short Biography-->
-                      </ion-item>
-                    </ion-card-content>
-                  </ion-card>
-                </ion-slide>
-              </ion-slides>
-           </ion-col>
-           <ion-col size-lg="0.5" size-md="1" size-sm="1.5" size-xs="1.5">
-             <button (click)="swipeNext()" [disabled]="disableNextBtn" class="slideButton"> 
-               <ion-icon class="arrowButton" name="chevron-forward-outline"></ion-icon>
-             </button>  
-           </ion-col>
-          </ion-row>
+                    </div>
+                    <div class="person-content-right" [ngClass]="{'content-border': true }">
+                      <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
+                      <div><ion-skeleton-text animated style="width: 100%"></ion-skeleton-text></div>
+                      <div><ion-skeleton-text animated style="width: 90%"></ion-skeleton-text></div>
+                      <div><ion-skeleton-text animated style="width: 80%"></ion-skeleton-text></div>
+                    </div> <!--Short Biography-->
+                  </ion-item>
+                </ion-card-content>
+              </ion-card>
+            </ion-slide>
+            <ion-slide class="person-slide" *ngFor="let person of matchedPeople; trackBy: customTrackBy">
+              <ion-card class="person-card" (click)="seeUserInfo($event, person)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
+                <ion-card-header>
+                  <div class="person-photo-container">
+                    <ion-img class="person-photo" *ngIf="person.avatar" [src]="person.avatar"></ion-img>
+                    <ion-img class="person-photo" *ngIf="!person.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+                  </div>
+                </ion-card-header>
+                <div class="top-pattern"></div>
+                <div class="middle-pattern"></div>
+                <div class="bottom-pattern"></div>
+                <ion-card-content class="person-content ion-no-padding">
+                  <ion-item lines="none" class="person-content-item ion-no-margin">
+                    <div class="person-content-left">
+                      <div class="person-name ion-text-md-uppercase">
+                        {{person.first_name}} {{person.last_name}}
+                      </div>
+                      <div class="person-title" [innerHTML]="person.title"></div>
+                    </div>
+                    <div class="person-content-right" [ngClass]="{'content-border': person.bio }" [innerHTML]="person.bio"></div> <!--Short Biography-->
+                  </ion-item>
+                </ion-card-content>
+              </ion-card>
+            </ion-slide>
+          </ion-slides>
+          <div class="swiper-button-next swiper-button-white" (click)="slides.slideNext()" [hidden]="disableNextBtn || this.platform.is('cordova') || this.platform.is('mobileweb')"></div>
         </div>
         <!--List-->
         <div *ngIf="moment.matrix_number[i][3] === 1">
@@ -918,7 +906,7 @@
               </ion-item>
             </ion-item-group>
             <div class="component" *ngIf="item === 10370"> <!--Plan-->
-              <ion-slides class="program-slides" #plansSlides [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
+              <ion-slides class="program-slides" #plansSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
                 <ion-slide class="program-slide" *ngFor="let program of planModules; trackBy: customTrackBy">
                   <ion-card class="program-card" (click)="openProgram($event, program)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
                     <ion-card-header class="ion-no-padding">
@@ -1423,7 +1411,7 @@
     <ion-item color="lightgrey" lines="none" class="section"> <!--Featured Communities/Programs Section Header-->
       <ion-label color="darkgrey" class="section-label ion-text-uppercase">Featured Communities</ion-label>
     </ion-item>
-    <ion-slides class="program-slides" #programsSlides (ionSlideDidChange)="swipeProgramslide($event)" [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
+    <ion-slides class="program-slides" #programsSlides (ionSlideDidChange)="swipeProgramslide($event)" [options]="{grabCursor: true, updateOnWindowResize: true}">
       <ion-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy">
         <ion-card class="program-card" (click)="openProgram($event, program)">
           <ion-card-header class="ion-no-padding">
