--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>{{this.categoryLabel}}</ion-title>
   </ion-toolbar>
-  <ion-toolbar>
+  <ion-toolbar *ngIf="activities"> <!--Show always except in Plans-->
     <ion-item [ngStyle]="{'font-size': platform.width() < 400 ? '11px' : '14px'}" lines="none">
       <div class="select-col"></div>
       <div class="user-col column-label" (click)="sortDisplay('activity')">{{this.categoryLabel}}<ion-icon [name]="activityAscending === true ? 'chevron-down-outline' : 'chevron-up-outline'"></ion-icon></div>
@@ -19,10 +19,10 @@
   <ion-list>
     <ion-item *ngFor="let activity of activities; index as i" (click)="openChildActivity($event, activity, 'view')" [hidden]="!((activity.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || activity.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
       <ion-buttons class="select-col">
-        <ion-button (click)="selectParticipant($event, activity)" fill="clear" *ngIf="!activity.select">
+        <ion-button (click)="selectActivity($event, activity)" fill="clear" *ngIf="!activity.select">
           <ion-icon color="tertiary" name="radio-button-off"></ion-icon>
         </ion-button>
-        <ion-button (click)="unselectParticipant($event, activity)" fill="clear" *ngIf="activity.select" >
+        <ion-button (click)="unselectActivity($event, activity)" fill="clear" *ngIf="activity.select" >
           <ion-icon color="tertiary" name="checkmark-circle"></ion-icon>
         </ion-button>
       </ion-buttons>
