--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -1,13 +1,10 @@
-<ion-header *ngIf="modalPage">
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar *ngIf="modalPage">
     <ion-buttons slot="start">
       <ion-button (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>Schedule</ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content *ngIf="schedule">
   <ion-toolbar class="filter">
     <ion-segment [(ngModel)]="view">
       <ion-segment-button value="timeline">Timeline</ion-segment-button>
@@ -15,6 +12,9 @@
       <ion-segment-button value="settings" [disabled]="!scheduleId">Settings</ion-segment-button>
     </ion-segment>
   </ion-toolbar>
+</ion-header>
+
+<ion-content *ngIf="schedule">
   <ion-list *ngIf="view === 'timeline'">
     <ion-item-group>
       <ion-item lines="none">
@@ -85,21 +85,17 @@
       <ion-button (click)="touchSchedule('update schedule')" *ngIf="this.schedule._id && this.parentCategoryId === '5c915476e172e4e64590e349'"> <!--Plan's Schedule-->
         <span>Save</span>
       </ion-button>
-      <ion-button (click)="promptTouchSchedule()" *ngIf="this.schedule._id && this.parentCategoryId !== '5c915476e172e4e64590e349' && this.schedule.options.recurrence"> <!--Only available for non-Plan child Activity-->
+      <ion-button (click)="promptTouchSchedule()" *ngIf="this.schedule._id && this.parentCategoryId !== '5c915476e172e4e64590e349' && this.schedule.options.recurrence" shape="round"> <!--Only available for non-Plan child Activity-->
         <span>Repopulate Timeline</span>
       </ion-button>
     </ion-row>
     <ion-item-divider></ion-item-divider>
-    <ion-row *ngIf="this.schedule._id && !timeline.length" class="ion-justify-content-center">
-      <ion-col class="ion-margin-horizontal">
-        <ion-note>Your timeline is empty. Use the 'Content' tab to add content.</ion-note>
-      </ion-col>
-    </ion-row>
-    <ion-row *ngIf="!this.schedule._id" class="ion-justify-content-center">
-      <ion-col class="ion-margin-horizontal">
-        <ion-note>Click 'Create Schedule' to begin.</ion-note>
-      </ion-col>
-    </ion-row>
+    <ion-item *ngIf="this.schedule._id && !timeline.length">
+      <ion-label class="ion-text-center message-label">Your timeline is empty.</ion-label>
+    </ion-item>
+    <ion-item *ngIf="!this.schedule._id">
+      <ion-label class="ion-text-center message-label">Click 'Create Schedule' to begin.</ion-label>
+    </ion-item>
     <ion-virtual-scroll [items]="timeline" approxItemHeight="48px" *ngIf="timeline.length">
       <ion-item *virtualItem="let calendaritem; let j = index;">
         <ion-reorder slot="start"><ion-icon name="menu"></ion-icon></ion-reorder>
@@ -114,6 +110,12 @@
         </ion-buttons>
       </ion-item>
     </ion-virtual-scroll>
+    <ion-row class="ion-justify-content-center" *ngIf="this.schedule._id">
+      <ion-button (click)="addContenCalendar()" shape="round" color="primary" fill="solid" expand="full">
+        <ion-icon name="add"></ion-icon>
+        <ion-label>Add New</ion-label>
+      </ion-button>
+    </ion-row>
   </ion-list>
     <ion-list *ngIf="view === 'content'">
       <ion-item lines="none">
@@ -125,8 +127,8 @@
       </ion-toolbar>
       <ion-grid class="program-grid">
         <ion-row class="program-row">
-          <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
-            <ion-card class="program-card" (click)="chooseChildActivity()" id="create-new-moment">
+          <ion-col class="ion-align-self-center" size="auto">
+            <ion-card class="program-card" (click)="addNewContent()" id="create-new-moment">
               <ion-card-header class="ion-no-padding" color="lightgrey">
                 <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
                   <ion-icon name="add" color="darkgrey"></ion-icon>
@@ -135,8 +137,8 @@
               <div class="program-name dark">Add</div>
             </ion-card>
           </ion-col>
-          <ion-col class="ion-align-self-center" *ngFor="let content of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((content.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || content.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
-            <ion-card class="program-card" (click)="chooseContent(content)">
+          <ion-col class="ion-align-self-center" *ngFor="let content of activities; index as i" size="auto" [hidden]="!((content.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || content.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
+            <ion-card class="program-card" (click)="defaultContentAction($event, content)">
               <ion-card-header class="ion-no-padding">
                 <div class="program-photo-container">
                   <ion-img class="program-photo" [src]="(content.assets && content.assets.length && content.assets[0]) | background: content._id"></ion-img>
@@ -144,9 +146,9 @@
               </ion-card-header>
               <div class="program-type"><ion-badge color="button1">{{content.resource['en-US'].value[0]}}</ion-badge></div>
               <div class="program-name light">{{content.matrix_string[0][0]}}</div>
-              <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="editContent($event, content)" fill="clear" size="small">
+              <!--<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openChildActivity($event, content, 'edit')" fill="clear" size="small">
                 <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
-              </ion-button>
+              </ion-button>-->
             </ion-card>
           </ion-col>
         </ion-row>
@@ -164,7 +166,7 @@
           <ion-input class="moment-input" type="text" [(ngModel)]="content.matrix_string[0][0]" [hidden]="content._id"></ion-input>
           <span class="moment-input" *ngIf="content._id">{{content.matrix_string[0][0]}}</span>
           <ion-buttons slot="end" class="ion-no-margin">
-            <ion-button fill="clear" color="grey" (click)="editContent($event, content)"><ion-icon name="cog"></ion-icon></ion-button>
+            <ion-button fill="clear" color="grey" (click)="openChildActivity($event, content, 'edit')"><ion-icon name="cog"></ion-icon></ion-button>
             <ion-button fill="clear" (click)="removeContent($event, j)" class="close-button"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
           </ion-buttons>
         </ion-item>
