--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -97,13 +97,19 @@
             <ion-label class="menu-label">Programs</ion-label>
           </ion-item>
         </ion-col>
-        <ion-col [ngClass]="{'selected': router.url.includes('plans')}" (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915476e172e4e64590e349'))">
-          <ion-item class="ion-no-padding" [color]="router.url.includes('plans') ? 'primary' : 'secondary'" lines="none" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">
+        <ion-col [ngClass]="{'selected': router.url.includes('plan')}" (click)="clickManageMenu('plans', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))"> <!--if Community or Program-->
+          <ion-item class="ion-no-padding" [color]="router.url.includes('plan') ? 'primary' : 'secondary'" lines="none" >
             <ion-icon class="ion-no-margin" slot="start" name="paper-plane"></ion-icon>
             <ion-label class="menu-label">Plans</ion-label>
           </ion-item>
         </ion-col>
-        <ion-col [ngClass]="{'selected': (router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id)}" (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i" [hidden]="!(moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210))"> <!--if Schedule is enabled-->
+        <ion-col [ngClass]="{'selected': router.url.includes('creator')}" (click)="clickManageMenu('creator', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5e9f46e1c8bf1a622fec69d5') || moment.categories.includes('5dfdbb547b00ea76b75e5a70'))"> <!--if Journey or Relationship-->
+          <ion-item class="ion-no-padding" [color]="router.url.includes('creator') ? 'primary' : 'secondary'" lines="none">
+            <ion-icon class="ion-no-margin" slot="start" name="paper-plane"></ion-icon>
+            <ion-label class="menu-label">Curriculum</ion-label>
+          </ion-item>
+        </ion-col>
+        <!--<ion-col [ngClass]="{'selected': (router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id)}" (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i" [hidden]="!(moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210))"> &lt;!&ndash;if Schedule is enabled&ndash;&gt;
           <ion-item class="ion-no-padding" [color]="(router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id) ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="book"></ion-icon>
             <ion-label class="menu-label">Schedule {{i + 1}}</ion-label>
@@ -114,7 +120,7 @@
             <ion-icon class="ion-no-margin" slot="start" name="book"></ion-icon>
             <ion-label class="menu-label">+ Schedule</ion-label>
           </ion-item>
-        </ion-col>
+        </ion-col>-->
         <ion-col [ngClass]="{'selected': router.url.includes('onboarding')}" (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
           <ion-item class="ion-no-padding" [color]="router.url.includes('onboarding') ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="list"></ion-icon>
@@ -147,83 +153,82 @@
 <!--Mobile View-->
 
 <ion-content *ngIf="resource && resource._id && moment.resource && moment.resource.field && platform.width() < 768" forceOverscroll="false">
-  <ion-grid class="full-height">
-    <ion-row class="full-height">
-      <ion-col class="full-height" size-xs="12" size-sm="12" size-md="3" size-lg="3">
-        <ion-list>
-          <ion-item>
-            <ion-badge>{{moment.resource['en-US'].value[0]}}</ion-badge>
-            <ion-badge style="margin-left: 5px" color="button1" *ngIf="moment.parent_programs && moment.parent_programs.length" (click)="upOneLevel(moment.parent_programs[0]._id)">Up one level</ion-badge>
-          </ion-item>
-          <ion-item (click)="clickManageMenu('insight', null)">
-            <ion-icon slot="start" name="person" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'insight')}">Insight</ion-label>
-          </ion-item>
-          <ion-item (click)="clickManageMenu('profile', null)">
-            <ion-icon slot="start" name="clipboard" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
-          </ion-item>
-          <ion-item (click)="clickManageMenu('people', null)">
-            <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'people')}">People</ion-label>
-          </ion-item>
-          <ion-item (click)="clickManageMenu('programs', null)" *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346') && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915475e172e4e64590e348')))">
-            <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'programs')}">Programs</ion-label>
-          </ion-item>
-          <!--show this for everything except Plan, and when Plan is in child_categories-->
-          <ion-item (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915476e172e4e64590e349'))">
-            <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'plans')}">Plans</ion-label>
-          </ion-item>
-          <!--Journey, only Show in Community or Program, and if they enabled this Children Category-->
-          <ion-item (click)="clickManageMenu('journey', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9f46e1c8bf1a622fec69d5')))"> <!--Journey-->
-            <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'journey')}">Journey</ion-label>
-          </ion-item>
-          <!--Mentoring, only Show in Community or Program, and if they enabled this Children Category-->
-          <ion-item (click)="clickManageMenu('mentoring', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe372c8bf1a622fec69d8')))"> <!--Mentoring-->
-            <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'mentoring')}">Mentoring</ion-label>
-          </ion-item>
-          <!--Groups, only Show in Community or Program, and if they enabled this Children Category-->
-          <ion-item (click)="clickManageMenu('groups', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe35cc8bf1a622fec69d7')))"> <!--Group-->
-            <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'groups')}">Groups</ion-label>
-          </ion-item>
-          <ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210)"> <!--if Schedule is enabled-->
-            <ion-item (click)="clickManageMenu('/schedule/', schedule)" *ngFor="let schedule of schedules; index as i">
-              <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-              <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'schedule' && selectedSchedule._id === schedule._id)}">Schedule {{i + 1}}</ion-label>
-            </ion-item>
-            <ion-item (click)="clickManageMenu('new-schedule', null)">
-              <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-              <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'new-schedule')}">+ Schedule</ion-label>
-            </ion-item>
-          </ion-item-group>
-          <ion-item (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
-            <ion-icon slot="start" name="list" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'onboarding')}">Onboarding</ion-label>
-          </ion-item>
-          <ion-item-group *ngIf="moment && moment.categories.includes('5c915324e172e4e64590e346')"> <!--Community Only Feature-->
-            <ion-item (click)="clickManageMenu('billing', null)" [hidden]="!this.stripeCustomer">
-              <ion-icon slot="start" name="card" *ngIf="platform.width() < 768"></ion-icon>
-              <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'billing')}">Billing</ion-label>
-            </ion-item>
-            <ion-item (click)="clickManageMenu('subscription', null)">
-              <ion-icon slot="start" name="planet" *ngIf="platform.width() < 768"></ion-icon>
-              <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'subscription')}">Subscription</ion-label>
-            </ion-item>
-          </ion-item-group>
-          <ion-item routerLink="/app/manage" *ngIf="moment._id === '5d5785b462489003817fee18' && userData.hasPlatformAdminAccess">
-            <ion-icon slot="start" name="eye" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label>Platform</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-list>
+    <ion-item>
+      <ion-badge>{{moment.resource['en-US'].value[0]}}</ion-badge>
+      <ion-badge style="margin-left: 5px" color="button1" *ngIf="moment.parent_programs && moment.parent_programs.length" (click)="upOneLevel(moment.parent_programs[0]._id)">Up one level</ion-badge>
+    </ion-item>
+    <ion-item (click)="clickManageMenu('insight', null)">
+      <ion-icon slot="start" name="person" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Insight</ion-label>
+    </ion-item>
+    <ion-item (click)="clickManageMenu('profile', null)">
+      <ion-icon slot="start" name="clipboard" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
+      <ion-label *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
+    </ion-item>
+    <ion-item (click)="clickManageMenu('people', null)">
+      <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>People</ion-label>
+    </ion-item>
+    <ion-item (click)="clickManageMenu('programs', null)" *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346') && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5c915475e172e4e64590e348')))">
+      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Programs</ion-label>
+    </ion-item>
+    <!--plan is shown only in Community and Program-->
+    <ion-item (click)="clickManageMenu('plans', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))"> <!--if Community or Program-->
+      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Plans</ion-label>
+    </ion-item>
+    <!--curriculum is shown only in journey and relationship-->
+    <ion-item (click)="clickManageMenu('creator', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5e9f46e1c8bf1a622fec69d5') || moment.categories.includes('5dfdbb547b00ea76b75e5a70'))"> <!--if Journey or Relationship-->
+      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Curriculum</ion-label>
+    </ion-item>
+    <!--Journey, only Show in Community or Program, and if they enabled this Children Category-->
+    <ion-item (click)="clickManageMenu('journey', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9f46e1c8bf1a622fec69d5')))"> <!--Journey-->
+      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Journey</ion-label>
+    </ion-item>
+    <!--Mentoring, only Show in Community or Program, and if they enabled this Children Category-->
+    <ion-item (click)="clickManageMenu('mentoring', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe372c8bf1a622fec69d8')))"> <!--Mentoring-->
+      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Mentoring</ion-label>
+    </ion-item>
+    <!--Groups, only Show in Community or Program, and if they enabled this Children Category-->
+    <ion-item (click)="clickManageMenu('groups', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe35cc8bf1a622fec69d7')))"> <!--Group-->
+      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Groups</ion-label>
+    </ion-item>
+    <!--<ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210)"> &lt;!&ndash;if Schedule is enabled&ndash;&gt;
+      <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i">
+        <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+        <ion-label>Schedule {{i + 1}}</ion-label>
+      </ion-item>
+      <ion-item (click)="clickManageMenu('new-schedule', null)">
+        <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+        <ion-label>+ Schedule</ion-label>
+      </ion-item>
+    </ion-item-group>-->
+    <ion-item (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
+      <ion-icon slot="start" name="list" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Onboarding</ion-label>
+    </ion-item>
+    <ion-item-group *ngIf="moment && moment.categories.includes('5c915324e172e4e64590e346')"> <!--Community Only Feature-->
+      <ion-item (click)="clickManageMenu('billing', null)" [hidden]="!this.stripeCustomer">
+        <ion-icon slot="start" name="card" *ngIf="platform.width() < 768"></ion-icon>
+        <ion-label>Billing</ion-label>
+      </ion-item>
+      <ion-item (click)="clickManageMenu('subscription', null)">
+        <ion-icon slot="start" name="planet" *ngIf="platform.width() < 768"></ion-icon>
+        <ion-label>Subscription</ion-label>
+      </ion-item>
+    </ion-item-group>
+    <ion-item routerLink="/app/manage" *ngIf="moment._id === '5d5785b462489003817fee18' && userData.hasPlatformAdminAccess">
+      <ion-icon slot="start" name="eye" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-label>Platform</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
 <!--Desktop View-->
