--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -12,11 +12,23 @@
     <ion-title *ngIf="step === 1 && categoryId === '5c915476e172e4e64590e349'">Choose a Plan</ion-title>
     <ion-title *ngIf="step === 1 && categoryId === '5e1bbda67b00ea76b75e5a73'">Choose a Content</ion-title>
     <ion-title *ngIf="step === 1 && categoryId === '5e17acd47b00ea76b75e5a71'">Choose an Onboarding Process</ion-title>
+    <ion-title *ngIf="step === 1 && !categoryId">Choose from Available Templates</ion-title>
 
     <ion-title *ngIf="step > 1">{{selectedMoments[0].matrix_string[0][0]}}</ion-title>
+      <ion-buttons slot="end">
+          <ion-button (click)="this.close(); router.navigate([{ outlets: { sub: null }}])" [hidden]="!subpanel"> <!--close subpanel-->
+              <ion-icon name="close"></ion-icon>
+          </ion-button>
+      </ion-buttons>
   </ion-toolbar>
   <ion-toolbar *ngIf="step === 1">
-    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" placeholder="Search"></ion-searchbar>
+    <ion-searchbar [(ngModel)]="searchKeyword" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)" debounce="500" placeholder="Search"></ion-searchbar>
+  </ion-toolbar>
+  <ion-toolbar class="filter" *ngIf="step === 1">
+    <ion-segment [(ngModel)]="currentView">
+      <ion-segment-button value="new">New</ion-segment-button>
+      <ion-segment-button value="recent">Recent</ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-header>
 
@@ -28,7 +40,7 @@
           <ion-label class="ion-margin-start">Choose One:</ion-label>
         </ion-row>
         <ion-row class="ion-justify-content-start">
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5e9f46e1c8bf1a622fec69d5'" [ngClass]="{'selected': categoryId === '5e9f46e1c8bf1a622fec69d5'}">
               <ion-card-header>
                 <ion-card-title>Journey</ion-card-title>
@@ -38,7 +50,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe372c8bf1a622fec69d8'" [ngClass]="{'selected': categoryId === '5e9fe372c8bf1a622fec69d8'}">
               <ion-card-header>
                 <ion-card-title>Mentoring</ion-card-title>
@@ -48,7 +60,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe35cc8bf1a622fec69d7'" [ngClass]="{'selected': categoryId === '5e9fe35cc8bf1a622fec69d7'}">
               <ion-card-header>
                 <ion-card-title>Group</ion-card-title>
@@ -58,7 +70,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5c915475e172e4e64590e348'" [ngClass]="{'selected': categoryId === '5c915475e172e4e64590e348'}">
               <ion-card-header>
                 <ion-card-title>Program</ion-card-title>
@@ -68,7 +80,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="categoryId = '5c915324e172e4e64590e346'" [ngClass]="{'selected': categoryId === '5c915324e172e4e64590e346'}">
               <ion-card-header>
                 <ion-card-title>Community</ion-card-title>
@@ -83,18 +95,11 @@
     </ion-row>
   </ion-grid>
   <div *ngIf="step === 1">
-    <ion-toolbar class="filter">
-      <ion-segment [(ngModel)]="currentView">
-        <ion-segment-button value="new">New</ion-segment-button>
-        <ion-segment-button value="recent">Recent</ion-segment-button>
-      </ion-segment>
-    </ion-toolbar>
     <div *ngIf="currentView === 'new'" class="new-section">
-      <div *ngFor="let parent of samples; index as i">
-        <ion-label class="program-title ion-margin" *ngIf="(categoryId !== '5e17acd47b00ea76b75e5a71') && parent.matrix_string">{{parent.matrix_string[0][0]}}</ion-label>
+        <!--<ion-label class="program-title ion-margin" *ngIf="(categoryId !== '5e17acd47b00ea76b75e5a71') && parent.matrix_string">{{parent.matrix_string[0][0]}}</ion-label>-->
         <ion-grid class="program-grid">
-          <ion-row class="program-row">
-            <ion-col *ngIf="allowCreate && i === 0" class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
+          <ion-row class="program-row ion-justify-content-start">
+            <ion-col *ngIf="allowCreate" class="ion-align-self-center" size="auto">
               <ion-card class="program-card" (click)="createMoment()" id="create-new-moment">
                 <ion-card-header class="ion-no-padding" color="lightgrey">
                   <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -104,41 +109,43 @@
                 <div class="program-name dark">Create</div>
               </ion-card>
             </ion-col>
-            <ion-col class="ion-align-self-center" *ngFor="let sample of parent.sample_activities; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!(sample.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || sample.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1)">
+            <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size="auto" [hidden]="!(sample.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || sample.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
               <ion-card class="program-card" (click)="selectSample(sample)">
                 <ion-card-header class="ion-no-padding">
                   <div class="program-photo-container">
                     <ion-img class="program-photo" [src]="(sample.assets && sample.assets.length && sample.assets[0]) | background: sample._id"></ion-img>
                   </div>
                 </ion-card-header>
-                <div class="program-type"><ion-badge color="button1">{{sample.resource['en-US'].value[0]}}</ion-badge></div>
+                <div class="program-type"><ion-badge color="button1" class="ion-text-wrap">{{sample.resource['en-US'].value[0]}}</ion-badge></div>
                 <div class="program-name light">{{sample.matrix_string[0][0]}}</div>
-                <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openFeature($event, sample)" fill="clear" size="small">
+                <!--<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openFeature($event, sample)" fill="clear" size="small">
                   <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
-                </ion-button>
+                </ion-button>-->
               </ion-card>
             </ion-col>
-          </ion-row>
-        </ion-grid>
-      </div>
+        </ion-row>
+      </ion-grid>
     </div>
     <ion-grid class="program-grid" *ngIf="currentView === 'recent'">
-      <ion-row class="program-row">
-        <ion-col class="ion-align-self-center" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : (categoryId === '5e17acd47b00ea76b75e5a71' ? calendarService.calendarItems.length - 1 : 50); index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!(calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && (calendarItem.moment.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || calendarItem.moment.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && (calendarItem.moment.categories.indexOf(categoryId) > -1))">
-          <ion-card class="program-card" (click)="selectCalendarItem(calendarItem)" *ngIf="calendarItem.moment" >   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
-            <ion-card-header class="ion-no-padding">
-              <div class="program-photo-container">
-                <ion-img class="program-photo" [src]="(calendarItem.moment.assets && calendarItem.moment.assets.length && calendarItem.moment.assets[0]) | background: calendarItem.moment._id"></ion-img>
-              </div>
-            </ion-card-header>
-            <div class="program-type"><ion-badge color="button1">{{calendarItem.moment.resource['en-US'].value[0]}}</ion-badge></div>
-            <div class="program-name light">{{calendarItem.moment.matrix_string[0][0]}}</div>
-            <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openFeature($event, calendarItem.moment)" fill="clear" size="small">
-              <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
-            </ion-button>
-          </ion-card>
-        </ion-col>
-      </ion-row>
+      <ion-virtual-scroll [items]="recentCalendarItems" approxItemHeight="100px">
+        <ion-item *virtualItem="let calendarItem; index as i"  (click)="selectCalendarItem($event, calendarItem)">
+          <div class="avatar-col" *ngIf="calendarItem.moment">
+            <ion-avatar class="user-avatar">
+              <ion-img [src]="(calendarItem.moment.assets && calendarItem.moment.assets.length && calendarItem.moment.assets[0]) | background: calendarItem.moment._id"></ion-img>
+            </ion-avatar>
+          </div>
+          <div class="name-col" *ngIf="calendarItem.moment">
+            <ion-label class="name-label ion-text-wrap">
+              {{calendarItem.moment.matrix_string[0][0]}}
+            </ion-label>
+          </div>
+          <div class="type-col"><ion-badge color="button1" class="ion-text-wrap">{{calendarItem.moment.resource['en-US'].value[0]}}</ion-badge></div>
+          <!--<div class="ion-text-wrap status-col column-label" style="font-size: 8px"><span *ngIf="calendarItem.moment.array_boolean[1]">Share in Marketplace</span></div>-->
+          <!--<ion-buttons class="actions-col ion-justify-content-evenly" *ngIf="calendarItem.moment">
+            <ion-button (click)="openFeature($event, calendarItem.moment)" fill="clear"><ion-icon name="eye-outline"></ion-icon></ion-button>
+          </ion-buttons>-->
+        </ion-item>
+      </ion-virtual-scroll>
     </ion-grid>
   </div>
   <ion-grid *ngIf="step === 2" class="full-height">
@@ -161,7 +168,7 @@
           <ion-label class="ion-margin-start">What is your role in {{selectedMoments[0].matrix_string[0][0]}}?</ion-label>
         </ion-row>
         <ion-row class="ion-justify-content-center">
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="joinAs = 'user_list_1'" [ngClass]="{'selected': joinAs === 'user_list_1'}">
               <ion-card-header>
                 <ion-card-title *ngIf="categoryId === '5e9f46e1c8bf1a622fec69d5'">Learner</ion-card-title>
@@ -181,7 +188,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-xs="6" size-sm="4" size-md="4" size-lg="3">
+          <ion-col size="auto">
             <ion-card class="category-card" mode="md" (click)="joinAs = 'user_list_3'" [ngClass]="{'selected': joinAs === 'user_list_3'}">
               <ion-card-header>
                 <ion-card-title *ngIf="categoryId === '5e9f46e1c8bf1a622fec69d5'">Facilitator</ion-card-title>
@@ -211,7 +218,7 @@
   <ion-toolbar *ngIf="step === 1 && selectedMoments.length">
     <ion-grid class="selected-grid">
       <ion-row>
-        <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3">
+        <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size="auto">
           <ion-card class="program-card" (click)="openFeature($event, moment)">
             <ion-card-header class="ion-no-padding">
               <div class="program-photo-container">
