--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -21,6 +21,25 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content *ngIf="!chatService.currentChatProps[propIndex]">
+  <ion-grid style="height: 100%">
+    <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
+      <div>
+        <ion-row class="ion-justify-content-center" style="margin-bottom: 50px">
+          <!--<ion-img class="login-logo" src="assets/img/push-notification.png"></ion-img>-->
+          <ion-icon name="chatbubbles"></ion-icon>
+        </ion-row>
+        <ion-row class="ion-justify-content-center">
+          <ion-label>No Chat Message to Display</ion-label>
+        </ion-row>
+        <ion-row class="ion-justify-content-center">
+          <ion-button (click)="router.navigate([{ outlets: { sub: null }}])" fill="clear">Close</ion-button>
+        </ion-row>
+      </div>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
 <ion-content *ngIf="chatService.currentChatProps[propIndex]">
   <!--This is the Chat page-->
   <!--get new data when page is refreshed-->
@@ -52,7 +71,7 @@
           <!--User Defined Activity-->
           <ion-grid class="multiple-photos" *ngIf="message.moment && message.moment.resource && message.moment.resource.field === 'User Defined Activity' && message.moment.resource.hasOwnProperty('en-US') && message.moment.resource['en-US'].value[0] !== 'Poll'">
             <ion-row class="ion-justify-content-start ion-no-padding">
-              <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size-xs="8" size-sm="8" size-md="6" size-lg="6" size-xl="4">
+              <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size="auto">
                 <ion-card class="program-card" (click)="openRestvoFeature(message.moment)">
                   <ion-card-header class="ion-no-padding">
                     <div class="chat-program-photo-container">
@@ -220,7 +239,7 @@
         <!--User Defined Activity-->
         <ion-grid class="multiple-photos" *ngIf="message.moment && message.moment.resource && message.moment.resource.field === 'User Defined Activity' && message.moment.resource.hasOwnProperty('en-US') && message.moment.resource['en-US'].value[0] !== 'Poll'">
           <ion-row class="ion-justify-content-end ion-no-padding">
-            <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size-xs="8" size-sm="8" size-md="6" size-lg="6" size-xl="4">
+            <ion-col class="ion-align-self-center ion-no-padding ion-padding-end ion-padding-top" size="auto">
               <ion-card class="program-card" (click)="openRestvoFeature(message.moment)">
                 <ion-card-header class="ion-no-padding">
                   <div class="chat-program-photo-container">
@@ -476,7 +495,7 @@
         </ion-grid>
         <ion-grid class="selected-grid" *ngIf="selectedMoments.length">
           <ion-row>
-            <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size-xs="12" size-sm="12" size-md="6" size-lg="6" size-xl="4">
+            <ion-col class="ion-align-self-center" *ngFor="let moment of selectedMoments; index as i" size="auto">
               <ion-card class="program-card" (click)="openRestvoFeature(moment)">
                 <ion-card-header class="ion-no-padding">
                   <div class="program-photo-container">
@@ -506,7 +525,7 @@
   </ion-toolbar>
   <ion-toolbar id="expandable" *ngIf="moreOptions" class="ion-no-padding">
     <div class="moreoptions">
-      <ion-slides class="program-slides" [options]="{slidesPerView: 3.5, grabCursor: true}">
+      <ion-slides class="program-slides" [options]="{grabCursor: true}">
         <ion-slide class="program-slide" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : 20; index as i; trackBy: customTrackBy" [hidden]="!((calendarItem.relationship ? (calendarItem.relationship === chatService.currentChatProps[this.propIndex].moment?._id) : true) && calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && calendarItem.moment.resource['en-US'].value[0] !== 'Onboarding Process')">
           <ion-card class="program-card" (click)="selectCalendarItem($event, calendarItem)" *ngIf="calendarItem.moment">
             <ion-card-header class="ion-no-padding">
