--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
@@ -14,38 +14,36 @@
     </ion-row>
   </ion-grid>
   <!--Two options: create a new plan, or choose from marketplace-->
-  <ion-grid class="full-height" *ngIf="planPage === 'createOrChoose'">
-    <ion-row class="full-height grid-row ion-align-items-center">
+  <ion-grid *ngIf="planPage === 'createOrChoose'">
+    <ion-row class="grid-row ion-align-items-center">
       <ion-col size-xs="12" size-sm="6">
         <ion-card class="category-card" mode="md" (click)="planPage = 'create'">
-          <ion-card-header>
-            <ion-card-title>Create a New Plan</ion-card-title>
-          </ion-card-header>
-          <!--<ion-card-content>
-            Image goes here
-          </ion-card-content>-->
+          <ion-card-content>
+            <img src="/assets/img/create-plan.png" alt="Create Plan Icon">
+            <br>
+            <strong>Create your own plan</strong>
+          </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col size-xs="12" size-sm="6">
         <ion-card class="category-card" mode="md" (click)="chooseFromMarketplace()">
-          <ion-card-header>
-            <ion-card-title>Choose from Available Template</ion-card-title>
-          </ion-card-header>
-          <!--<ion-card-content>
-            Image goes here
-          </ion-card-content>-->
+          <ion-card-content>
+            <img src="/assets/img/select-template.png" alt="Select Template Icon">
+            <br>
+            <strong>Select from available templates</strong>
+          </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
   <!--In the create step, show a form to collect basic info about a new Plan-->
-  <ion-grid class="full-height" *ngIf="planPage === 'create'">
+  <!-- <ion-grid class="full-height" *ngIf="planPage === 'create'">
     <ion-row class="ion-justify-content-center ion-align-items-center full-height">
       <ion-col>
-        <ion-item lines="none"> <!--Create Your own plan-->
+        <ion-item lines="none">
           <div class="moment-label" style="font-style: italic; color: var(--ion-color-darkgrey)" slot="start">Create Your Own Plan</div>
         </ion-item>
-        <ion-item lines="none" class="ion-margin-vertical"> <!--Name-->
+        <ion-item lines="none" class="ion-margin-vertical">
           <ion-label position="stacked">Name your plan</ion-label>
           <ion-input class="ion-text-start" type="text" [(ngModel)]="planName" placeholder="Plan Name"></ion-input>
         </ion-item>
@@ -65,5 +63,5 @@
         </ion-row>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 </ion-content>
