uncommented create plan form

--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
@@ -37,7 +37,7 @@
     </ion-row>
   </ion-grid>
   <!--In the create step, show a form to collect basic info about a new Plan-->
-  <!-- <ion-grid class="full-height" *ngIf="planPage === 'create'">
+  <ion-grid class="full-height" *ngIf="planPage === 'create'">
     <ion-row class="ion-justify-content-center ion-align-items-center full-height">
       <ion-col>
         <ion-item lines="none">
@@ -63,5 +63,5 @@
         </ion-row>
       </ion-col>
     </ion-row>
-  </ion-grid> -->
+  </ion-grid>
 </ion-content>
