minimal create plan form styling

--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.scss
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.scss
@@ -26,4 +26,9 @@ app-feature-plans {
     height: 300px;
     text-align: center;
   }
+
+  .form-container {
+    width: 500px;
+    margin: 0 auto;
+  }
 }
