--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
@@ -37,31 +37,33 @@
     </ion-row>
   </ion-grid>
   <!--In the create step, show a form to collect basic info about a new Plan-->
-  <ion-grid class="full-height" *ngIf="planPage === 'create'">
-    <ion-row class="ion-justify-content-center ion-align-items-center full-height">
-      <ion-col>
-        <ion-item lines="none">
-          <div class="moment-label" style="font-style: italic; color: var(--ion-color-darkgrey)" slot="start">Create Your Own Plan</div>
-        </ion-item>
-        <ion-item lines="none" class="ion-margin-vertical">
-          <ion-label position="stacked">Name your plan</ion-label>
-          <ion-input class="ion-text-start" type="text" [(ngModel)]="planName" placeholder="Plan Name"></ion-input>
-        </ion-item>
-        <ion-item lines="none" class="ion-margin-vertical">
-          <ion-label position="stacked">Select the type of plan</ion-label>
-          <ion-select (ionChange)="loadSample($event)" placeholder="Plan Type">
-            <ion-select-option value="5ea350d2dede5c7f29cf8490">Journey</ion-select-option>
-            <ion-select-option value="5ea398fadede5c7f29cf85c4">Group</ion-select-option>
-            <ion-select-option value="5df88e7669f2546c0a26a7f3">Mentoring</ion-select-option>
-            <ion-select-option value="5ea1fa876240cd58bb82a694">Program</ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-row class="ion-margin-vertical">
-          <ion-button [disabled]="!planName || !selectedSample" expand="full" shape="round" class="centered" (click)="createPlan()">
-            <div>Create new plan</div>
-          </ion-button>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-card>
+    <ion-grid class="full-height" *ngIf="planPage === 'create'">
+      <ion-row class="ion-justify-content-center ion-align-items-center full-height form-container">
+        <ion-col>
+          <ion-item lines="none">
+            <div class="moment-label" slot="start">Create Your Own Plan</div>
+          </ion-item>
+          <ion-item class="ion-margin-vertical">
+            <ion-label position="stacked">Name your plan</ion-label>
+            <ion-input class="ion-text-start" type="text" [(ngModel)]="planName" placeholder="Plan Name"></ion-input>
+          </ion-item>
+          <ion-item class="ion-margin-vertical">
+            <ion-label position="stacked">Select the type of plan</ion-label>
+            <ion-select (ionChange)="loadSample($event)" placeholder="Plan Type">
+              <ion-select-option value="5ea350d2dede5c7f29cf8490">Journey</ion-select-option>
+              <ion-select-option value="5ea398fadede5c7f29cf85c4">Group</ion-select-option>
+              <ion-select-option value="5df88e7669f2546c0a26a7f3">Mentoring</ion-select-option>
+              <ion-select-option value="5ea1fa876240cd58bb82a694">Program</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-row class="ion-margin-vertical">
+            <ion-button style="width: 100%;" [disabled]="!planName || !selectedSample" expand="full" shape="round" (click)="createPlan()">
+              <div>Create new plan</div>
+            </ion-button>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
