--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.scss
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.scss
@@ -31,4 +31,10 @@ app-feature-plans {
     width: 500px;
     margin: 0 auto;
   }
+
+  @media (max-width: 600px) {
+    .form-container {
+      width: 100%;
+    }
+  }
 }
