implement Alvin's content creation design (#106)
* changed assigned to flag icon to tag icon

* setup card design according to figma

* uncommented create plan form

* minimal create plan form styling

* added responsiveness

--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.scss
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.scss
@@ -17,4 +17,24 @@ app-feature-plans {
   .summary-label {
     width: 20%;
   }
+
+  .category-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 300px;
+    text-align: center;
+  }
+
+  .form-container {
+    width: 500px;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 600px) {
+    .form-container {
+      width: 100%;
+    }
+  }
 }
