--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -222,8 +222,10 @@
                 <ion-icon name="add"></ion-icon>
               </ion-button>
             </ion-item>
-            <div *ngIf="!(myMentees && myMentees.length)">
-              Image 
+            <div class="empty-state" *ngIf="!(myMentees && myMentees.length)">
+              <img src="assets/img/mentees.svg" alt="" />
+              <a [href]="['../choose', { categoryId: '5e9fe372c8bf1a622fec69d8', joinAs: 'user_list_3' }]" class="underline">
+              You don't have any mentees yet. Discover some today.</a>
             </div>
             <ion-slides class="relationship-slides" [options]="{slidesPerView: 2.8, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
               <ion-slide class="relationship-slide" *ngFor="let relationship of myMentees; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
